data/derived/comb/progs/unify/prog4239.ml.out
Characters 115-120:
  g f b
  ^^^^^
Error: This expression has type ('a -> 'a) -> 'a * bool
       but an expression was expected of type ('a -> 'a) -> ('a -> 'a) * bool
       The type variable 'a occurs inside 'a -> 'a
